tests/specs/ecosystem/kevinbonnoron/monadojs/0_2_0.test
kevinbonnoron/monadojs/0.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/operators/throw-error/throw-error.ts:1:45
  | 
1 | export const throwError = (error: Error) => () => {
  |                                             ^^^^^^^
2 |   throw error;
  | ^^^^^^^^^^^^^^
3 | };
  | ^ this function is missing an explicit return type
  = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


